--- a/my-t3-app/package.json
+++ b/my-t3-app/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@popperjs/core": "^2.11.8",
     "@prisma/client": "^4.14.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
@@ -25,6 +27,8 @@
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-popper": "^2.3.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
